fix last flush condition (#37)
* fix last flush condition

* update circle ci config to have a separate step for pylinting

* install pylint in pylinting step

* bump version

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,14 @@ jobs:
             . venv/bin/activate
             pip install --upgrade pip
             pip install .[test]
+
+      - run:
+          name: 'Pylinting'
+          command: |
+            . venv/bin/activate
+            pip install .[test]
             pylint target_snowflake -d C,W,unexpected-keyword-arg,duplicate-code
-   
+
       - run:
           name: 'Unit Tests'
           command: |
