--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,21 +18,20 @@ jobs:
           name: 'Pylinting'
           command: |
             . venv/bin/activate
-            pip install .[test]
             pylint target_snowflake -d C,W,unexpected-keyword-arg,duplicate-code
 
       - run:
           name: 'Unit Tests'
           command: |
             . venv/bin/activate
-            pip install .[test]
+            export LOGGING_CONF_FILE=$(pwd)/sample_logging.conf
             nosetests --where=tests/unit
 
       - run:
           name: 'Integration Tests'
           command: |
             . venv/bin/activate
-            pip install .[test]
+            export LOGGING_CONF_FILE=$(pwd)/sample_logging.conf
             nosetests --where=tests/integration/
 
 workflows:
