--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,86 @@
+asn1crypto==1.4.0
+astroid==2.3.3
+attrs==20.3.0
+aws-sam-translator==1.32.0
+aws-xray-sdk==2.6.0
+azure-common==1.1.26
+azure-core==1.9.0
+azure-storage-blob==2.1.0
+azure-storage-common==2.1.0
+backoff==1.3.2
+boto==2.49.0
+boto3==1.16.28
+botocore==1.12.253
+certifi==2020.11.8
+cffi==1.14.4
+cfn-lint==0.42.0
+chardet==3.0.4
+ciso8601==2.1.3
+cryptography==3.2.1
+decorator==4.4.2
+docker==4.4.0
+docutils==0.15.2
+ecdsa==0.14.1
+future==0.18.2
 idna==2.7
-singer-python==5.1.1
-snowflake-connector-python==2.0.3
-boto3==1.9.33
+ijson==3.1.3
 inflection==0.3.1
+iniconfig==1.1.1
+isodate==0.6.0
+isort==4.3.21
+Jinja2==2.11.2
+jmespath==0.10.0
 joblib==0.16.0
+jsondiff==1.2.0
+jsonpatch==1.28
+jsonpickle==1.4.2
+jsonpointer==2.0
+jsonschema==3.2.0
+junit-xml==1.9
+lazy-object-proxy==1.4.3
+MarkupSafe==1.1.1
+mccabe==0.6.1
+mock==3.0.5
+more-itertools==8.6.0
+moto==1.3.16
+msrest==0.6.19
+networkx==2.5
+nose==1.3.7
+oauthlib==3.1.0
+oscrypto==1.2.1
+packaging==20.7
+pipelinewise-singer-python==1.1.4
+pipelinewise-target-snowflake==1.9.0
+pluggy==0.13.1
+py==1.9.0
+pyasn1==0.4.8
+pycparser==2.20
+pycryptodomex==3.9.9
+PyJWT==1.7.1
+pylint==2.4.2
+pyOpenSSL==20.0.0
+pyparsing==2.4.7
+pyrsistent==0.17.3
+pytest==6.1.2
+python-dateutil==2.8.1
+python-dotenv==0.14.0
+python-jose==3.2.0
+pytz==2018.4
+PyYAML==5.3.1
+requests==2.22.0
+requests-oauthlib==1.3.0
+responses==0.12.1
+rsa==4.6
+s3transfer==0.3.3
+simplejson==3.11.1
+singer-python==5.1.1
+six==1.15.0
+snowflake-connector-python==2.0.3
+sshpubkeys==3.1.0
+toml==0.10.2
+urllib3==1.24.3
+websocket-client==0.57.0
+Werkzeug==1.0.1
+wrapt==1.11.2
+xmltodict==0.12.0
+zipp==3.4.0
