Private key taken as a path parameter for using snowpipe

--- a/tests/integration/.env
+++ b/tests/integration/.env
@@ -12,5 +12,7 @@ TARGET_SNOWFLAKE_FILE_FORMAT=exo_el_stage.csv_file_format
 TARGET_SNOWFLAKE_LOAD_VIA_SNOWPIPE=true
 TARGET_SNOWFLAKE_AWS_ACCESS_KEY=
 TARGET_SNOWFLAKE_AWS_SECRET_ACCESS_KEY=
+TARGET_SNOWFLAKE_PRIVATE_KEY_PATH=
+TARGET_SNOWFLAKE_PRIVATE_KEY_PASSWORD=
 CLIENT_SIDE_ENCRYPTION_MASTER_KEY=
 CLIENT_SIDE_ENCRYPTION_STAGE_OBJECT=
