private key varibles picked up from .env file

--- a/tests/integration/.env
+++ b/tests/integration/.env
@@ -7,7 +7,7 @@ TARGET_SNOWFLAKE_SCHEMA=exo_el_stage
 TARGET_SNOWFLAKE_AWS_PROFILE=dw
 TARGET_SNOWFLAKE_S3_BUCKET=hu-airflow-scratch
 TARGET_SNOWFLAKE_S3_KEY_PREFIX=wordpress/
-TARGET_SNOWFLAKE_STAGE=exo_el_stage.wordpress_el_stage
+TARGET_SNOWFLAKE_STAGE=exo_el_stage.wordpress_el_ext_stage
 TARGET_SNOWFLAKE_FILE_FORMAT=exo_el_stage.csv_file_format
 TARGET_SNOWFLAKE_LOAD_VIA_SNOWPIPE=true
 TARGET_SNOWFLAKE_AWS_ACCESS_KEY=
