DATA-1128: kinda working but not

--- a/tests/integration/.env
+++ b/tests/integration/.env
@@ -1,7 +1,7 @@
 TARGET_SNOWFLAKE_ACCOUNT=yq01973.us-east-1
 TARGET_SNOWFLAKE_DBNAME=artifact
 TARGET_SNOWFLAKE_USER=exo_el_usr
-TARGET_SNOWFLAKE_PASSWORD=XQVH-@nU&=q74qK6
+TARGET_SNOWFLAKE_PASSWORD=Nu_NAXErC9W9rpZhqvWn
 TARGET_SNOWFLAKE_WAREHOUSE=analysis
 TARGET_SNOWFLAKE_SCHEMA=exo_el_stage
 TARGET_SNOWFLAKE_AWS_PROFILE=dw
