comment CI config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,16 +6,16 @@ jobs:
     steps:
       - checkout
 
-      - run:
-          name: install dependencies
-          command: make venv
-
-      - run:
-          name: 'Integration Tests'
-          no_output_timeout: 20m
-          command: |
-            export LOGGING_CONF_FILE=$(pwd)/sample_logging.conf
-            make integration_test
+#      - run:
+#          name: install dependencies
+#          command: make venv
+#
+#      - run:
+#          name: 'Integration Tests'
+#          no_output_timeout: 20m
+#          command: |
+#            export LOGGING_CONF_FILE=$(pwd)/sample_logging.conf
+#            make integration_test
 
 workflows:
   version: 2
