--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,10 +1,11 @@
 name: CI
 
-on:
-  pull_request:
-  push:
-    branches:
-      - master
+# TODO setup infra for supporting CI pipelines
+# on:
+#   pull_request:
+#   push:
+#     branches:
+#       - master
 
 jobs:
   lint_and_test:
